--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.6.4"
+    "mongodb": "^3.6.4",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
