--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
