--- a/package.json
+++ b/package.json
@@ -2,23 +2,33 @@
   "name": "fullstack_vue_express",
   "version": "1.0.0",
   "description": "Full stack vue and express app",
-  "main": "index.js",
-  "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
-  },
   "author": "Douglas Rudy",
-  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon server/index.js",
+    "start": "node server/index.js"
+  },
+  "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap-vue": "^2.21.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
     "multer": "^1.4.2",
+    "vue": "^2.6.12",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+    "@babel/polyfill": "^7.11.5",
+    "bootstrap": "^4.6.0",
+    "mutationobserver-shim": "^0.3.7",
+    "nodemon": "^2.0.7",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "vue-cli-plugin-bootstrap-vue": "~0.7.0"
+  },
+  "license": "MIT"
 }
