--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "mongodb": "^3.6.5",
+    "mongoose": "^5.12.3",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.1"
   },
