--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer-gridfs-storage": "^4.2.0",
     "vue": "^2.6.12",
     "vue-material": "^1.0.0-beta-15",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-toasted": "^1.1.28"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
