--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "vue-toasted": "^1.1.28"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1"
   }
 }
