--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue": "^2.6.12",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.1",
-    "vue-toasted": "^1.1.28"
+    "vue-toasted": "^1.1.28",
+    "vue2-interact": "0.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
