--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "nodemailer": "^6.5.0",
     "vue": "^2.6.12",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.1",
